logs/dag_id=dag_allocate_messages/run_id=manual__2024-03-27T14:42:34.175712+00:00/task_id=select_and_allocate_messages/attempt=1.log
[2024-03-27T14:42:36.092+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_allocate_messages.select_and_allocate_messages manual__2024-03-27T14:42:34.175712+00:00 [queued]>
[2024-03-27T14:42:36.117+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_allocate_messages.select_and_allocate_messages manual__2024-03-27T14:42:34.175712+00:00 [queued]>
[2024-03-27T14:42:36.118+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 6
[2024-03-27T14:42:36.162+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): select_and_allocate_messages> on 2024-03-27 14:42:34.175712+00:00
[2024-03-27T14:42:36.186+0000] {standard_task_runner.py:60} INFO - Started process 12810 to run task
[2024-03-27T14:42:36.248+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_allocate_messages', 'select_and_allocate_messages', 'manual__2024-03-27T14:42:34.175712+00:00', '--job-id', '1072', '--raw', '--subdir', 'DAGS_FOLDER/dag_allocate_messages.py', '--cfg-path', '/tmp/tmpg51t6ayl']
[2024-03-27T14:42:36.264+0000] {standard_task_runner.py:88} INFO - Job 1072: Subtask select_and_allocate_messages
[2024-03-27T14:42:36.491+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_allocate_messages.select_and_allocate_messages manual__2024-03-27T14:42:34.175712+00:00 [running]> on host 932f824b7ebb
[2024-03-27T14:42:36.891+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='daniel' AIRFLOW_CTX_DAG_ID='dag_allocate_messages' AIRFLOW_CTX_TASK_ID='select_and_allocate_messages' AIRFLOW_CTX_EXECUTION_DATE='2024-03-27T14:42:34.175712+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-03-27T14:42:34.175712+00:00'
[2024-03-27T14:42:36.936+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-27T14:42:37.018+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag_allocate_messages.py", line 21, in select_and_allocate_messages
    insert_message(cursor, "success_messages", message)
  File "/opt/airflow/dags/dag_allocate_messages.py", line 41, in insert_message
    cursor.execute(
psycopg2.errors.SyntaxError: syntax error at or near "success_messages"
LINE 1: INSERT INTO success_messages success_messages (msg_id, msg_d...
                                     ^

[2024-03-27T14:42:37.066+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_allocate_messages, task_id=select_and_allocate_messages, execution_date=20240327T144234, start_date=20240327T144236, end_date=20240327T144237
[2024-03-27T14:42:37.122+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1072 for task select_and_allocate_messages (syntax error at or near "success_messages"
LINE 1: INSERT INTO success_messages success_messages (msg_id, msg_d...
                                     ^
; 12810)
[2024-03-27T14:42:37.200+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-27T14:42:37.347+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
